Added protocol statistics and satisfied static analysis rules